--- a/assets/Style/main.css
+++ b/assets/Style/main.css
@@ -1,7 +1,7 @@
 /*!
  * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
+ * Copyright 2011-2024 The Bootstrap Authors
+ * Copyright 2011-2024 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 @import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap);
@@ -9930,10 +9930,9 @@ iframe {
 }
 video {
   display: block;
-  width: auto;
-  height: auto;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
+
   background: #f8fcfc;
 }
 audio,
@@ -14078,6 +14077,10 @@ footer .navbar li a:hover {
   width: 2rem;
   height: 2rem;
   min-width: 2rem;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .user-profile-template .list-group .list-group-item {
   padding-top: 1.25rem;
