--- a/assets/Style/main.css
+++ b/assets/Style/main.css
@@ -26,7 +26,7 @@
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
-  --bs-light: #f8fcfc;
+  --bs-light: #212529;
   --bs-dark: #212529;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
@@ -10231,9 +10231,7 @@ select::-ms-expand {
 .bg-gray-50 {
   background-color: #e9ecef !important;
 }
-.bg-gray-100 {
-  background-color: #f8f9fa !important;
-}
+
 .bg-gray-200 {
   background-color: #e9ecef;
 }
