--- a/assets/Registration/css/main.css
+++ b/assets/Registration/css/main.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-color: #ffffff;
+  background-color: #1e1e1e !important;
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
 }
@@ -25,7 +25,7 @@ body {
 }
 
 .left-side {
-  background-color: #ded8ef;
+  background-color: #1a1919;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -51,7 +51,7 @@ body {
   align-items: center;
 }
 .right-side a {
-  color: #e98265;
+  color: #ffc107;
   font-weight: 500;
   text-decoration: none;
   transition: all 0.4s ease;
@@ -62,7 +62,7 @@ body {
 .right-side h2 {
   font-size: 3.2rem;
   font-weight: 700;
-  color: #323537;
+  color: white;
 }
 .right-side p {
   color: #88898a;
@@ -160,9 +160,10 @@ body {
   margin-bottom: 3.2rem;
   width: 100%;
   transition: all 0.4s ease;
+  background: none;
 }
 .right-side form input:focus {
-  border: 0.1rem solid #e98265;
+  border: 0.1rem solid #ffc107;
   background-color: none;
   outline: none;
   box-shadow: 0 0 0.8rem rgba(233, 130, 101, 0.241);
@@ -178,18 +179,17 @@ body {
   color: #88898a;
 }
 .right-side #register-button {
-  display: inline-block;
+  height: 100%;
   width: 100%;
-  transition: all 0.4s ease;
-  background-color: #e98265;
-  padding: 1.4rem 3.2rem;
-  cursor: pointer;
-  font-weight: 500;
-  font-family: "Poppins", sans-serif;
-  color: #fff;
+  outline: none;
+  color: black;
   border: none;
-  border-radius: 0.8rem;
-  box-shadow: 0 0 1.6rem rgba(233, 130, 101, 0.587);
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  background: #ffc107;
+  padding: 10px;
 }
 .right-side #register-button:hover {
   background-color: #f39d85;
@@ -285,4 +285,8 @@ body {
 .left-side {
   border-radius: 10px;
   margin: 20px;
+}
+
+i {
+  color: white !important;
 }
